# hyperdht-cpp

./: .clang-format  .dockerignore  .gitignore  .gitmodules  AUDIT.md  CMakeLists.txt  Dockerfile  LICENSE  PROTOCOL.md  README.md  ROADMAP.md  SECURITY-AUDIT.md  STATUS.md  VERSIONS.md  flake.nix  hyperdht.pc.in
.github/workflows/: android-asan.yml  build.yml  windows.yml
cmake/: hyperdht-config.cmake.in
components/hyperdht/: CMakeLists.txt  linker.lf
components/libudx/: CMakeLists.txt  linker.lf
components/libuv-esp32/: CMakeLists.txt
components/libuv-esp32/include/: uv.h
components/libuv-esp32/include/uv/: errno.h  esp32.h
components/libuv-esp32/src/: heap-inl.h  internal.h  queue-inl.h  uv_async.c  uv_getaddrinfo.c  uv_handle.c  uv_interface.c  uv_loop.c  uv_misc.c  uv_poll.c  uv_prepare.c  uv_timer.c  uv_udp.c
docs/: .parity-sweep-2026-07-09.raw.json  .parity-sweep-appendix.md  BUILDING-ANDROID.md  BUILDING-ESP32.md  BUILDING-PYTHON.md  BUILDING-RUST.md  BUILDING.md  C-API.md  CPP-API.md  ESP32-IMPLEMENTATION-PLAN.md  FIELD-DIAGNOSIS-2026-07-22.md  JS-COMPARISON.md  JS-MAPPING.md  JS-PARITY-GAPS.md  PARITY-SWEEP-2026-07-09.md  PROTOCOL.md  README.md  RELAY-UPGRADE-PORT.md  REMAINING-WORK.md  TODO.md
docs/archive/: JS-PARITY-GAPS.md
examples/android/: README.md  local.properties  settings.gradle.kts
examples/android/app/: build.gradle.kts
examples/cpp/: README.md  client.cpp  server.cpp
examples/cpp/nospoon/: CMakeLists.txt  client.cpp  config.hpp  framing.hpp  full_tunnel.hpp  full_tunnel_linux.cpp  full_tunnel_macos.cpp  full_tunnel_windows.cpp  main.cpp  routing.hpp  server.cpp  tun.hpp  tun_linux.hpp  tun_macos.cpp  tun_macos.hpp  tun_windows.cpp  tun_windows.hpp  validation.hpp
examples/cpp/nospoon/wintun/: wintun.h
examples/esp32/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
examples/esp32/echo-server/: CMakeLists.txt  sdkconfig.defaults
examples/esp32/echo-server/main/: Kconfig.projbuild  main.c
examples/esp32/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
examples/js/: README.md  client.js  package.json  server.js
examples/python/: README.md  build.sh  example.py  hash_demo.py  holesail_server.py  hyperdht  keypair_demo.py  ping_demo.py  state_demo.py  storage_demo.py  test_wrapper.py  webserver.py
examples/python/hyperdht/: _bindings.py
examples/rust/: Cargo.toml  README.md
examples/rust/scripts/: holesail-demo.sh
examples/rust/src/: client.rs  holesail_server.rs  server.rs  static_http.rs
fuzz/: CMakeLists.txt  fuzz_compact.cpp  fuzz_handshake_msg.cpp  fuzz_holepunch_msg.cpp  fuzz_messages.cpp  fuzz_noise_payload.cpp
include/hyperdht/: announce.hpp  announce_sig.hpp  announcer.hpp  async_utils.hpp  blind_relay.hpp  compact.hpp  connection_pool.hpp  debug.hpp  dht.hpp  dht_messages.hpp  dht_ops.hpp  health.hpp  holepunch.hpp  hyperdht.h  lru_cache.hpp  messages.hpp  nat_sampler.hpp  noise_wrap.hpp  peer_connect.hpp  protomux.hpp  query.hpp  relay_upgrade.hpp  router.hpp  routing_table.hpp  rpc.hpp  rpc_handlers.hpp  secret_stream.hpp  server.hpp  server_connection.hpp  socket_pool.hpp  tokens.hpp  udx.hpp
journey/: DEVELOPMENT.md  README.md
nix/: echo-module.nix  echo-server.nix  holesail.nix  lib.nix  module.nix  server-test.nix
src/: announce.cpp  announce_sig.cpp  announcer.cpp  async_utils.cpp  blind_relay.cpp  compact.cpp  connect.cpp  connection_pool.cpp  dht.cpp  dht_messages.cpp  dht_network.cpp  dht_ops.cpp  dht_storage.cpp  ffi_core.cpp  ffi_internal.hpp  ffi_server.cpp  ffi_storage.cpp  ffi_stream.cpp  health.cpp  holepunch.cpp  hyperdht_api.cpp  messages.cpp  nat_sampler.cpp  noise_wrap.cpp  peer_connect.cpp  protomux.cpp  query.cpp  relay_upgrade.cpp  router.cpp  routing_table.cpp  rpc.cpp  rpc_handlers.cpp  secret_stream.cpp  server.cpp  server_connection.cpp  socket_pool.cpp  tokens.cpp  udx.cpp
test/: test_announce.cpp  test_announce_sig.cpp  test_announcer.cpp  test_async_utils.cpp  test_blind_relay.cpp  test_c_api.cpp  test_compact.cpp  test_compact_cross.cpp  test_connect_paths.cpp  test_connection_pool.cpp  test_crypto_verify.cpp  test_dht_messages.cpp  test_dht_ops.cpp  test_echo_fixture.cpp  test_echo_native.c  test_edge_cases.cpp  test_ffi.py  test_health.cpp  test_holepunch.cpp  test_hyperdht.cpp  test_id_parity.cpp  test_live_bootstrap_smoke.cpp  test_live_connect.cpp  test_lru_cache.cpp  test_messages.cpp  test_nat_sampler.cpp  test_noise.cpp  test_noise_cross.cpp  test_protomux.cpp  test_protomux_secretstream.cpp  test_query.cpp  test_relay_upgrade.cpp  test_ring_sampler.cpp  test_router.cpp  test_routing_table.cpp  test_rpc_bootstrap.cpp  test_rpc_handlers.cpp  test_rpc_ping.cpp  test_secret_stream.cpp  test_server.cpp  (+13 more)
test/js/: connect_to_cpp_server.js  dht_ping_server.js  findpeer_test.js  generate_message_vectors.js  generate_noise_vectors.js  generate_test_vectors.js  generate_wire_vectors.js  hyperdht_server.js  noise_responder.js  package-lock.json  package.json  simple_server.js  storage_get.js  storage_put.js  test-fixture.js  test_node_queries.js  test_node_serves.js  test_server.sh  udx_echo_server.js
wrappers/kotlin/: CMakeLists.txt  build.gradle.kts  proguard-rules.pro
wrappers/kotlin/src/main/cpp/: hyperdht_jni.cpp
wrappers/kotlin/src/main/kotlin/com/hyperdht/: HyperDHT.kt  Native.kt  Server.kt  Stream.kt  Types.kt
wrappers/python/: README.md  example.py  holesail_server.py  pyproject.toml  test_wrapper.py
wrappers/python/hyperdht/: __init__.py  _bindings.py  _ffi.py  _server.py
wrappers/rust/: Cargo.toml
wrappers/rust/hyperdht/: Cargo.toml  README.md  build.rs
wrappers/rust/hyperdht-sys/: Cargo.toml  README.md  build.rs  wrapper.h
wrappers/rust/hyperdht-sys/src/: lib.rs
wrappers/rust/hyperdht-sys/tests/: smoke.rs
wrappers/rust/hyperdht/src/: dht.rs  dht_ops.rs  error.rs  keypair.rs  lib.rs  loop_thread.rs  options.rs  server.rs  stream.rs
wrappers/rust/hyperdht/tests/: concurrent.rs  drop_midflight.rs  mutable.rs
wrappers/rust/scripts/: asan-suppressions.txt  asan-test.sh
(+10 files in other folders)
