[workspace]
resolver = "2"
members = [
    "hyperdht-sys",
    # "hyperdht",   # Phase 2 — added when we get there
    # "holesail",   # Phase 2.5
]

[workspace.package]
version = "0.4.0"
edition = "2021"
license = "LGPL-3.0"
repository = "https://github.com/jjacke13/hyperdht-cpp"
authors = ["Vaios K"]

[profile.release]
lto = "thin"
codegen-units = 1
